# quickImage

./: .gitignore  CMakeLists.txt  README.md  kernel.cu  main.cpp  projectProposal.typ  setup.sh
